fix overflow issues in project modules

--- a/styles/ProjectModule.module.scss
+++ b/styles/ProjectModule.module.scss
@@ -9,6 +9,7 @@
 }
 
 .modWrapper {
+    overflow: hidden;
     box-shadow: 0 10px 30px -15px var(--navy-shadow);
     display: flex;
     -webkit-box-pack: justify;
